# maldives-business-registry-scraper

./: .env.sample  .gitignore  Dockerfile  README.md  pyproject.toml
.actor/: README.md  actor.json  dataset_schema.json  input_schema.json
crawler/: extractors.py  main.py  routes.py
src/brs/: __main__.py  extractors.py  main.py  routes.py
tests/: runs.py
