[project]
name = "brs"
version = "1.0.0"
description = ""
authors = [
    { name = "Fauzaan Gasim", email = "hello@fauzaanu.com" }
]
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
    "crawlee[parsel]",
    "apify",
    "python-dotenv>=1.1.1",
]

[dependency-groups]
dev = [
    "ruff>=0.13.1",
]

[project.scripts]
brs = "brs.__main__:cli_main"

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[tool.uv]
package = true
